Fixing the rest of the compiler errors.

--- a/src/app/swiss/components/match-results/match-results.component.html
+++ b/src/app/swiss/components/match-results/match-results.component.html
@@ -1,16 +1,32 @@
-<form class="form-horizontal panel panel-default"
-    *ngIf="selectedPairing"
-    [formGroup]="matchResultsForm"
-    (submit)="submit()"
-    novalidate>
+<form
+  class="form-horizontal panel panel-default"
+  *ngIf="selectedPairing"
+  [formGroup]="matchResultsForm"
+  (submit)="submit()"
+  novalidate
+>
   <div class="panel-body">
     <div class="form-group">
-      <label for="player1Wins" class="col-xs-4 control-label">{{player1Name}}:</label>
+      <label for="player1Wins" class="col-xs-4 control-label"
+        >{{ player1Name }}:</label
+      >
       <div class="col-xs-2">
         <div class="input-group">
-          <input type="number" class="form-control" id="player1Wins" min="0" max="2" formControlName="player1Wins">
+          <input
+            type="number"
+            class="form-control"
+            id="player1Wins"
+            min="0"
+            max="2"
+            formControlName="player1Wins"
+          />
           <span class="input-group-btn">
-            <button type="button" class="btn btn-default" (click)="incrementPlayer1Wins()" [disabled]="selectedRoundComplete">
+            <button
+              type="button"
+              class="btn btn-default"
+              (click)="incrementPlayer1Wins()"
+              [disabled]="selectedRoundComplete"
+            >
               <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
             </button>
           </span>
@@ -20,19 +36,33 @@
       <div class="col-xs-6">
         <div class="checkbox">
           <label>
-            <input type="checkbox" formControlName="player1Dropped"> Drop
+            <input type="checkbox" formControlName="player1Dropped" /> Drop
           </label>
         </div>
       </div>
     </div>
 
     <div class="form-group">
-      <label for="player2Wins" class="col-xs-4 control-label">{{player2Name}}:</label>
+      <label for="player2Wins" class="col-xs-4 control-label"
+        >{{ player2Name }}:</label
+      >
       <div class="col-xs-2">
         <div class="input-group">
-          <input type="number" class="form-control" id="player2Wins" min="0" max="2" formControlName="player2Wins">
+          <input
+            type="number"
+            class="form-control"
+            id="player2Wins"
+            min="0"
+            max="2"
+            formControlName="player2Wins"
+          />
           <span class="input-group-btn">
-            <button type="button" class="btn btn-default" (click)="incrementPlayer2Wins()" [disabled]="selectedRoundComplete">
+            <button
+              type="button"
+              class="btn btn-default"
+              (click)="incrementPlayer2Wins()"
+              [disabled]="selectedRoundComplete"
+            >
               <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
             </button>
           </span>
@@ -42,7 +72,7 @@
       <div class="col-xs-6">
         <div class="checkbox">
           <label>
-            <input type="checkbox" formControlName="player2Dropped"> Drop
+            <input type="checkbox" formControlName="player2Dropped" /> Drop
           </label>
         </div>
       </div>
@@ -52,9 +82,21 @@
       <label for="draws" class="col-xs-4 control-label">Draws:</label>
       <div class="col-xs-2">
         <div class="input-group">
-          <input type="number" class="form-control" id="draws" min="0" max="9" formControlName="draws">
+          <input
+            type="number"
+            class="form-control"
+            id="draws"
+            min="0"
+            max="9"
+            formControlName="draws"
+          />
           <span class="input-group-btn">
-            <button type="button" class="btn btn-default" (click)="incrementDraws()" [disabled]="selectedRoundComplete">
+            <button
+              type="button"
+              class="btn btn-default"
+              (click)="incrementDraws()"
+              [disabled]="selectedRoundComplete"
+            >
               <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
             </button>
           </span>
@@ -64,17 +106,25 @@
 
     <div class="form-group">
       <div class="col-xs-4">
-        <button type="submit"
-            class="btn btn-default pull-right"
-            [disabled]="matchResultsForm.errors?.matchResultInvalid || selectedRoundComplete">
+        <button
+          type="submit"
+          class="btn btn-default pull-right"
+          [disabled]="
+            (matchResultsForm.errors &&
+              matchResultsForm.errors['matchResultInvalid']) ||
+            selectedRoundComplete
+          "
+        >
           Submit
         </button>
       </div>
       <div class="col-xs-4">
-        <button type="button"
-            class="btn btn-default"
-            (click)="clearMatchResult.emit(selectedPairing)"
-            [disabled]="selectedRoundComplete">
+        <button
+          type="button"
+          class="btn btn-default"
+          (click)="clearMatchResult.emit(selectedPairing)"
+          [disabled]="selectedRoundComplete"
+        >
           Clear Result
         </button>
       </div>
