--- a/src/app/swiss/components/player-list/player-list.component.html
+++ b/src/app/swiss/components/player-list/player-list.component.html
@@ -15,7 +15,7 @@
     <button
       class="close"
       *ngIf="!hasTournamentStarted"
-      (click)="delete.emit(player.id)"
+      (click)="delete.emit(player.id!)"
     >
       &times;
     </button>
