--- a/src/app/swiss/components/player-form/player-form.component.html
+++ b/src/app/swiss/components/player-form/player-form.component.html
@@ -1,21 +1,53 @@
-<form class="form-horizontal panel panel-default" [formGroup]="swissPlayerForm" (ngSubmit)="submit()" novalidate>
+<form
+  class="form-horizontal panel panel-default"
+  [formGroup]="swissPlayerForm"
+  (ngSubmit)="submit()"
+  novalidate
+>
   <div class="panel-body">
     <div class="form-group">
       <label for="player-name" class="col-sm-4 control-label">Name:</label>
       <div class="col-sm-8">
-        <input class="form-control" id="player-name" placeholder="Name" formControlName="name" #name required>
+        <input
+          class="form-control"
+          id="player-name"
+          placeholder="Name"
+          formControlName="name"
+          #name
+          required
+        />
       </div>
     </div>
     <div class="form-group">
       <div class="col-sm-offset-4 col-sm-8">
-        <button type="submit" class="btn btn-default" [disabled]="!swissPlayerForm.valid">{{addMode ? 'Add' : 'Save'}} Player</button>
-        <button type="reset" class="btn btn-default" (click)="reset.emit()" [disabled]="!swissPlayerForm.valid">Cancel</button>
-        <button type="button"
+        <button
+          type="submit"
+          class="btn btn-default"
+          [disabled]="!swissPlayerForm.valid"
+        >
+          {{ addMode ? 'Add' : 'Save' }} Player
+        </button>
+        <button
+          type="reset"
+          class="btn btn-default"
+          (click)="reset.emit()"
+          [disabled]="!swissPlayerForm.valid"
+        >
+          Cancel
+        </button>
+        <button
+          type="button"
           class="btn"
-          [ngClass]="{'btn-default': !isPlayerDroppable, 'btn-warning': isPlayerDroppable}"
+          [ngClass]="{
+            'btn-default': !isPlayerDroppable,
+            'btn-warning': isPlayerDroppable
+          }"
           *ngIf="hasTournamentStarted && !isTournamentOver"
           [disabled]="!selectedPlayer || !selectedPlayer.id"
-          (click)="togglePlayerDropped.emit(selectedPlayer)">{{isPlayerDroppable ? 'Drop' : 'Undrop'}}</button>
+          (click)="togglePlayerDropped.emit(selectedPlayer!)"
+        >
+          {{ isPlayerDroppable ? 'Drop' : 'Undrop' }}
+        </button>
       </div>
     </div>
   </div>
