Fixing bug I added to the PairingsList.

--- a/src/app/swiss/components/pairings-list/pairings-list.component.html
+++ b/src/app/swiss/components/pairings-list/pairings-list.component.html
@@ -28,7 +28,7 @@
                 : filterText
                 : showOutstandingOnly
           "
-          [ngClass]="{ active: selectedPairing.id === pairing.id }"
+          [ngClass]="{ active: selectedPairing?.id === pairing.id }"
           (click)="selectPairing.emit(pairing)"
         >
           <td>{{ pairing.table }}</td>
