Building new components.
Issue #115

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,19 @@
 @use 'reset';
-@use 'abstracts/variables';
-@use 'abstracts/functions';
-@use 'abstracts/mixins';
-@use 'base/typography';
+// @use 'abstracts/variables';
+// @use 'abstracts/functions';
+// @use 'abstracts/mixins';
+// @use 'base/typography';
 @use 'themes/theme';
+
+body {
+  font-family: var(--md-sys-typescale-body-medium-font-family-name);
+  font-style: var(--md-sys-typescale-body-medium-font-family-style);
+  font-weight: var(--md-sys-typescale-body-medium-font-weight);
+  font-size: var(--md-sys-typescale-body-medium-font-size);
+  letter-spacing: var(--md-sys-typescale-body-medium-letter-spacing);
+  line-height: var(--md-sys-typescale-body-medium-line-height);
+  text-transform: var(--md-sys-typescale-body-medium-text-transform);
+  text-decoration: var(--md-sys-typescale-body-medium-text-decoration);
+  background: var(--md-sys-color-background);
+  color: var(--md-sys-color-on-background);
+}
