--- a/src/app/setup/containers/setup-page/setup-page.component.html
+++ b/src/app/setup/containers/setup-page/setup-page.component.html
@@ -1,15 +1,4 @@
-<!-- <div class="setup-page">
-  <mm-top-app-bar>MirrorMatch</mm-top-app-bar>
-  <div class="cards-container">
-    <mm-card
-      *ngFor="let card of cards"
-      (click)="onClick(card.link)"
-      [disabled]="card.disabled"
-      tabindex="0"
-    >
-      <div class="mm-headline-small">{{ card.title }}</div>
-      <div class="mm-body-small">{{ card.body }}</div>
-    </mm-card>
-  </div>
-</div> -->
-Setup page!
+<mm-top-app-bar>Mirror Match</mm-top-app-bar>
+<main>
+  <div>Match Type</div>
+</main>
