--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -1,7 +1,10 @@
 body,
 html {
+  height: 100vh;
+}
+
+body {
   font-family: Roboto, 'Helvetica Neue', sans-serif;
-  min-height: 100%;
   margin: 0;
   overflow-x: hidden;
 }
