--- a/src/styles/themes/theme-dark.scss
+++ b/src/styles/themes/theme-dark.scss
@@ -35,6 +35,9 @@
     --md-sys-color-on-background: var(--md-sys-color-on-background-dark);
     --md-sys-color-surface: var(--md-sys-color-surface-dark);
     --md-sys-color-on-surface: var(--md-sys-color-on-surface-dark);
+    --md-sys-color-on-surface-opacity-12: var(
+      --md-sys-color-on-surface-opacity-12-dark
+    );
     --md-sys-color-surface-variant: var(--md-sys-color-surface-variant-dark);
     --md-sys-color-on-surface-variant: var(
       --md-sys-color-on-surface-variant-dark
