--- a/src/app/shared/components/segmented-button/segmented-button.component.scss
+++ b/src/app/shared/components/segmented-button/segmented-button.component.scss
@@ -1,6 +1,6 @@
+@use 'sass:color';
 @use 'sass:math';
 
-$border: solid 1px var(--md-sys-color-outline);
 $height: 40px;
 $border-radius: math.div($height, 2);
 
@@ -10,23 +10,17 @@ $border-radius: math.div($height, 2);
   button {
     align-items: center;
     background: none;
-    border: {
-      top: $border;
-      right: $border;
-      bottom: $border;
-      left: none;
-    }
-    color: var(--md-sys-color-on-surface);
+    border: none;
     cursor: pointer;
     display: inline-flex;
     flex: 1;
     height: $height;
     justify-content: center;
+    outline: solid 1px var(--md-sys-color-outline);
     padding: 0 12px;
 
     &:first-child {
       border: {
-        left: $border;
         top-left-radius: $border-radius;
         bottom-left-radius: $border-radius;
       }
@@ -39,14 +33,28 @@ $border-radius: math.div($height, 2);
       }
     }
 
-    &.selected {
-      background-color: var(--md-sys-color-secondary-container);
-      color: var(--md-sys-color-on-secondary-container);
+    .label {
+      color: var(--md-sys-color-on-surface);
     }
 
     .material-icons {
       font-size: 18px;
       margin-right: 8px;
+    }
+
+    &:disabled {
+      outline-color: var(--md-sys-color-on-surface-opacity-12);
+      cursor: default;
+
+      .label,
+      .material-icons {
+        opacity: 0.38;
+      }
+    }
+
+    &.selected {
+      background-color: var(--md-sys-color-secondary-container);
+      color: var(--md-sys-color-on-secondary-container);
     }
   }
 }
