--- a/src/styles/themes/tokens.scss
+++ b/src/styles/themes/tokens.scss
@@ -297,4 +297,9 @@
   --md-sys-elevation-level3: 0.11;
   --md-sys-elevation-level4: 0.12;
   --md-sys-elevation-level5: 0.14;
+  /* state layer opacities */
+  --md-sys-state-hover-state-layer-opacity: 0.08;
+  --md-sys-state-focus-state-layer-opacity: 0.12;
+  --md-sys-state-pressed-state-layer-opacity: 0.12;
+  --md-sys-state-dragged-state-layer-opacity: 0.16;
 }
