--- a/src/app/setup/containers/setup-page/setup-page.component.html
+++ b/src/app/setup/containers/setup-page/setup-page.component.html
@@ -1,8 +1,13 @@
 <mm-top-app-bar>Mirror Match</mm-top-app-bar>
 <main>
-  <h4>Match Type</h4>
+  <h4 class="title-medium">Match Type</h4>
   <mm-segmented-button
     [options]="matchTypes"
     [selected]="matchTypes[1]"
+  ></mm-segmented-button>
+  <h4 class="title-medium">Event Structure</h4>
+  <mm-segmented-button
+    [options]="eventStructures"
+    [selected]="eventStructures[1]"
   ></mm-segmented-button>
 </main>
