Working on switch component.
Issue #115

--- a/src/app/setup/containers/setup-page/setup-page.component.html
+++ b/src/app/setup/containers/setup-page/setup-page.component.html
@@ -10,4 +10,5 @@
     [options]="eventStructures"
     [selected]="eventStructures[1]"
   ></mm-segmented-button>
+  <mm-switch></mm-switch>
 </main>
