--- a/src/app/shared/components/switch/switch.component.scss
+++ b/src/app/shared/components/switch/switch.component.scss
@@ -4,8 +4,10 @@ $color-outline: var(--md-sys-color-outline);
 $color-surface-variant: var(--md-sys-color-surface-variant);
 $height: 32px;
 $thumb-size: 16px;
+$width: 52px;
 
 $thumb-border-radius: math.div($thumb-size, 2);
+$thumb-margin: $width - $height;
 $track-border-radius: math.div($height, 2);
 
 :host {
@@ -13,25 +15,46 @@ $track-border-radius: math.div($height, 2);
     background: none;
     border: none;
     display: inline-flex;
+    height: $height;
     margin: 0;
     position: relative;
-
-    .thumb {
-      background-color: $color-outline;
-      border-radius: $thumb-border-radius;
-      height: $thumb-size;
-      left: 0;
-      position: absolute;
-      top: 0;
-      width: $thumb-size;
-    }
+    width: $width;
 
     .track {
+      align-items: center;
       background-color: $color-surface-variant;
       border-radius: $track-border-radius;
-      height: $height;
+      display: flex;
+      height: 100%;
+      justify-content: center;
       outline: solid 2px $color-outline;
-      width: 52px;
+      position: absolute;
+      width: 100%;
+
+      .thumb-container {
+        display: flex;
+        margin-inline-end: $thumb-margin;
+        transition: margin 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      }
+
+      .thumb {
+        background-color: $color-outline;
+        border-radius: $thumb-border-radius;
+        height: $thumb-size;
+        // left: 0;
+        // position: absolute;
+        // top: 0;
+        width: $thumb-size;
+      }
+    }
+
+    &.selected {
+      .track {
+        .thumb-container {
+          margin-inline-end: 0;
+          margin-inline-start: $thumb-margin;
+        }
+      }
     }
   }
 }
