Issue #115: Switching back to angular material.
- Trying to make everything from scratch will be way too time consuming
  for me.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,19 +1,44 @@
-@use 'reset';
-// @use 'abstracts/variables';
-// @use 'abstracts/functions';
-// @use 'abstracts/mixins';
-// @use 'base/typography';
-@use 'themes/theme';
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
 
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$mirror-match-primary: mat.define-palette(mat.$indigo-palette);
+$mirror-match-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$mirror-match-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$mirror-match-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $mirror-match-primary,
+      accent: $mirror-match-accent,
+      warn: $mirror-match-warn,
+    ),
+  )
+);
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($mirror-match-theme);
+
+html,
 body {
-  font-family: var(--md-sys-typescale-body-medium-font-family-name);
-  font-style: var(--md-sys-typescale-body-medium-font-family-style);
-  font-weight: var(--md-sys-typescale-body-medium-font-weight);
-  font-size: var(--md-sys-typescale-body-medium-font-size);
-  letter-spacing: var(--md-sys-typescale-body-medium-letter-spacing);
-  line-height: var(--md-sys-typescale-body-medium-line-height);
-  text-transform: var(--md-sys-typescale-body-medium-text-transform);
-  text-decoration: var(--md-sys-typescale-body-medium-text-decoration);
-  background: var(--md-sys-color-background);
-  color: var(--md-sys-color-on-background);
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
