Issue #115: Starting on new setup flow.

--- a/src/app/setup/containers/setup-page/setup-page.component.html
+++ b/src/app/setup/containers/setup-page/setup-page.component.html
@@ -1,4 +1,5 @@
-<mm-top-app-bar>Mirror Match</mm-top-app-bar>
+<router-outlet></router-outlet>
+<!-- <mm-top-app-bar>Mirror Match</mm-top-app-bar>
 <main>
   <h4 class="title-medium">Match Type</h4>
   <mm-segmented-button
@@ -11,4 +12,4 @@
     [selected]="eventStructures[1]"
   ></mm-segmented-button>
   <mm-switch></mm-switch>
-</main>
+</main> -->
